--- a/百思不得姐/Podfile
+++ b/百思不得姐/Podfile
@@ -1,7 +1,8 @@
-platform :ios, "6.0"
+platform :ios, "7.0"
 
 pod "AFNetworking"
 pod "SVProgressHUD"
 pod "SDWebImage"
 pod "MJExtension"
 pod "MJRefresh"
+pod "DACircularProgress"
