--- a/百思不得姐/百思不得姐/Info.plist
+++ b/百思不得姐/百思不得姐/Info.plist
@@ -25,6 +25,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
